[workspace]
members = [
    "crates/agent",
    "crates/attribution",
    "crates/capture",
    "crates/config",
    "crates/core",
    "crates/ebpf-abi",
    "crates/ebpf-object",
    "crates/e2e-dynssl-fixture",
    "crates/e2e-fixture",
    "crates/e2e-libssl-ffi",
    "crates/e2e-support",
    "crates/enforcement",
    "crates/exporter",
    "crates/interception",
    "crates/parsers",
    "crates/pipeline",
    "crates/policy",
    "crates/probe-http",
    "crates/probe-io",
    "crates/proto",
    "crates/runtime",
    "crates/storage",
    "crates/transparent-linux",
    "crates/xtask",
]
exclude = ["crates/ebpf-program"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://example.invalid/traffic-probe"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
