[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attribution = { path = "../attribution" }
capture = { path = "../capture" }
clap = { version = "4.6.1", features = ["derive"] }
ebpf-object = { path = "../ebpf-object" }
enforcement = { path = "../enforcement" }
exporter = { path = "../exporter" }
parsers = { path = "../parsers" }
pipeline = { path = "../pipeline" }
policy = { path = "../policy" }
probe-core = { path = "../core" }
probe-config = { path = "../config" }
probe-io = { path = "../probe-io" }
proto = { path = "../proto" }
runtime = { path = "../runtime" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rustix = { version = "1.1", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
storage = { path = "../storage" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "1.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"
