[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attribution = { path = "../attribution" }
capture = { path = "../capture" }
clap = { version = "4.6.1", features = ["derive"] }
ebpf-object = { path = "../ebpf-object" }
enforcement = { path = "../enforcement" }
exporter = { path = "../exporter" }
interception = { path = "../interception" }
mitm-proxy = { path = "../mitm-proxy" }
parsers = { path = "../parsers" }
pipeline = { path = "../pipeline" }
policy = { path = "../policy" }
probe-core = { path = "../core" }
probe-config = { path = "../config" }
probe-http = { path = "../probe-http" }
probe-io = { path = "../probe-io" }
proto = { path = "../proto" }
runtime = { path = "../runtime" }
rustix = { version = "1.1", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
storage = { path = "../storage" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "process", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "1.1"
socket2 = { version = "0.6.4", features = ["all"] }
transparent-linux = { path = "../transparent-linux" }
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
http = "1.4"
rustls = "0.23"
rustls-native-certs = "0.8"
notify = { version = "8.2", default-features = false }
rtnetlink = "0.21"
futures-util = "0.3"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["std", "crossterm_0_29"] }
unicode-width = "0.2"
toml_edit = { version = "0.25", features = ["serde"] }
blake3 = "1.8.5"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }

[lints]
workspace = true

[build-dependencies]
ebpf-object = { path = "../ebpf-object" }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"
