[package]
name = "attribution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.5"
probe-core = { path = "../core" }
thiserror = "2.0.18"

[lints]
workspace = true

[[test]]
name = "attribution"
path = "tests/attribution/mod.rs"

[dev-dependencies]
tempfile = "3.27.0"
