[package]
name = "capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { version = "1.11.1", features = ["serde"] }
pcap = "2.4"
probe-core = { path = "../core" }
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.150"
tempfile = "3.27.0"

[lints]
workspace = true
