[package]
name = "capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aya = "0.13"
bytes = { version = "1.11.1", features = ["serde"] }
ebpf-abi = { version = "0.1.0", path = "../ebpf-abi" }
ebpf-object = { version = "0.1.0", path = "../ebpf-object" }
object = { version = "0.39", default-features = false, features = ["elf", "read_core", "std"] }
pcap = "2.4"
probe-core = { path = "../core" }
probe-io = { path = "../probe-io" }
ring = "0.17.14"
rustix = { version = "1.1.4", features = ["pipe"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
