[package]
name = "probe-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "probe_config"
path = "src/lib.rs"

[dependencies]
probe-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5"

[lints]
workspace = true

[[test]]
name = "config"
path = "tests/config/mod.rs"
