[package]
name = "probe-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "probe_config"
path = "src/lib.rs"

[dependencies]
http = "1.4"
probe-core = { path = "../core" }
probe-io = { path = "../probe-io" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5"

[lints]
workspace = true

[[test]]
name = "config"
path = "tests/config/mod.rs"
