[package]
name = "e2e-dynssl-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sssa-e2e-dynssl-fixture"
path = "src/main.rs"

[dependencies]
libloading = "0.9.0"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
