[package]
name = "e2e-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sssa-e2e-fixture"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
e2e-libssl-ffi = { version = "0.1.0", path = "../e2e-libssl-ffi" }
openssl = "0.10"
rustix = "1.1"
