[package]
name = "e2e-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "traffic-probe-e2e-fixture"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
e2e-libssl-ffi = { version = "0.1.0", path = "../e2e-libssl-ffi" }
e2e-support = { version = "0.1.0", path = "../e2e-support" }
openssl = "0.10"
rustix = { version = "1.1", features = ["net"] }
serde_json = "1.0.150"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
tempfile = "3.27.0"
