[package]
name = "e2e-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
capture = { version = "0.1.0", path = "../capture" }
probe-core = { version = "0.1.0", path = "../core" }
serde_json = "1.0.150"
