[package]
name = "enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
attribution = { path = "../attribution" }
libc = "0.2"
netlink-sys = "0.8"
probe-core = { path = "../core" }
rustix = { version = "1.1", features = ["process"] }
thiserror = "2.0.18"

[lints]
workspace = true
