[package]
name = "exporter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
probe-core = { path = "../core" }
proto = { version = "0.1.0", path = "../proto" }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt"] }
zstd = "0.13.3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
