[package]
name = "exporter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
probe-core = { path = "../core" }
probe-http = { path = "../probe-http" }
proto = { version = "0.1.0", path = "../proto" }
rustix = { version = "1.1.4", features = ["fs", "process"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "rt"] }
tower-service = "0.3"
zstd = "0.13.3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
