[package]
name = "mitm-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "traffic-probe-mitm-proxy"
path = "src/main.rs"

[dependencies]
capture = { path = "../capture" }
clap = { version = "4.6", features = ["derive"] }
probe-core = { path = "../core" }
probe-io = { path = "../probe-io" }
rustix = { version = "1.1", features = ["process"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2.0"

[dev-dependencies]
rcgen = "0.14"
tempfile = "3.27"

[lints]
workspace = true
