[package]
name = "mitm-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "traffic-probe-mitm-proxy"
path = "src/main.rs"

[dependencies]
attribution = { path = "../attribution" }
capture = { path = "../capture" }
clap = { version = "4.6", features = ["derive"] }
probe-core = { path = "../core" }
probe-io = { path = "../probe-io" }
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
rustix = { version = "1.1", features = ["fs", "process"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2.0"
x509-parser = "0.18"

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
