[package]
name = "pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
capture = { path = "../capture" }
enforcement = { path = "../enforcement" }
parsers = { path = "../parsers" }
policy = { path = "../policy" }
probe-core = { path = "../core" }
proto = { path = "../proto" }
serde_json = "1.0.150"
storage = { path = "../storage" }
thiserror = "2.0.18"

[lints]
workspace = true

[[test]]
name = "pipeline"
path = "tests/pipeline/mod.rs"

[dev-dependencies]
tempfile = "3.27.0"
