[package]
name = "policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luajit", "vendored", "serialize", "send"] }
probe-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true
