[package]
name = "probe-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustix = { version = "1.1", features = ["fs", "process"] }
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
