[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.11.1"
fjall = "3.1.5"
probe-core = { path = "../core" }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
