[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8"
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
evidence = { path = "../evidence" }
redb = "4.1"
secure-io = { path = "../secure-io" }
zeroize = "1.9"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27"
