[package]
name = "transparent-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
interception = { path = "../interception" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
probe-config = { path = "../config" }
probe-core = { path = "../core" }

[lints]
workspace = true
