[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
capture = { version = "0.1.0", path = "../capture" }
ebpf-object = { version = "0.1.0", path = "../ebpf-object" }
probe-config = { version = "0.1.0", path = "../config" }
probe-core = { version = "0.1.0", path = "../core" }
serde_json = "1.0.150"
storage = { version = "0.1.0", path = "../storage" }
toml = "1.1"

[lints]
workspace = true
