[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
capture = { version = "0.1.0", path = "../capture" }
ebpf-object = { version = "0.1.0", path = "../ebpf-object" }
e2e-support = { version = "0.1.0", path = "../e2e-support" }
exporter = { version = "0.1.0", path = "../exporter" }
interception = { version = "0.1.0", path = "../interception" }
probe-config = { version = "0.1.0", path = "../config" }
probe-core = { version = "0.1.0", path = "../core" }
proto = { version = "0.1.0", path = "../proto" }
rustix = { version = "1.1.4", features = ["process"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
socket2 = { version = "0.6.4", features = ["all"] }
storage = { version = "0.1.0", path = "../storage" }
toml = "1.1"
transparent-linux = { version = "0.1.0", path = "../transparent-linux" }

[lints]
workspace = true
